--- a/book/book/microbiome-analysis-workflow.html
+++ b/book/book/microbiome-analysis-workflow.html
@@ -138,11 +138,9 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="4.1" data-path="amplicon-bioinformatics-data-cleaning.html"><a href="amplicon-bioinformatics-data-cleaning.html#libraries"><i class="fa fa-check"></i><b>4.1</b> Libraries</a></li>
 <li class="chapter" data-level="4.2" data-path="amplicon-bioinformatics-data-cleaning.html"><a href="amplicon-bioinformatics-data-cleaning.html#dataset"><i class="fa fa-check"></i><b>4.2</b> Dataset</a></li>
 <li class="chapter" data-level="4.3" data-path="amplicon-bioinformatics-data-cleaning.html"><a href="amplicon-bioinformatics-data-cleaning.html#trimming-filtering"><i class="fa fa-check"></i><b>4.3</b> Trimming &amp; Filtering</a></li>
-<li class="chapter" data-level="4.4" data-path="amplicon-bioinformatics-data-cleaning.html"><a href="amplicon-bioinformatics-data-cleaning.html#infer-ribosomal-sequence-variants"><i class="fa fa-check"></i><b>4.4</b> Infer Ribosomal Sequence Variants</a></li>
+<li class="chapter" data-level="4.4" data-path="amplicon-bioinformatics-data-cleaning.html"><a href="amplicon-bioinformatics-data-cleaning.html#infer-sequence-variants"><i class="fa fa-check"></i><b>4.4</b> Infer Sequence Variants</a></li>
 <li class="chapter" data-level="4.5" data-path="amplicon-bioinformatics-data-cleaning.html"><a href="amplicon-bioinformatics-data-cleaning.html#merging-forward-reverse-dna-sequences"><i class="fa fa-check"></i><b>4.5</b> Merging Forward &amp; Reverse DNA Sequences</a></li>
-<li class="chapter" data-level="4.6" data-path="amplicon-bioinformatics-data-cleaning.html"><a href="amplicon-bioinformatics-data-cleaning.html#construct-sequence-table"><i class="fa fa-check"></i><b>4.6</b> Construct Sequence Table</a></li>
-<li class="chapter" data-level="4.7" data-path="amplicon-bioinformatics-data-cleaning.html"><a href="amplicon-bioinformatics-data-cleaning.html#remove-chimeras"><i class="fa fa-check"></i><b>4.7</b> Remove Chimeras</a></li>
-<li class="chapter" data-level="4.8" data-path="amplicon-bioinformatics-data-cleaning.html"><a href="amplicon-bioinformatics-data-cleaning.html#track-reads-through-the-pipeline"><i class="fa fa-check"></i><b>4.8</b> Track Reads through the Pipeline</a></li>
+<li class="chapter" data-level="4.6" data-path="amplicon-bioinformatics-data-cleaning.html"><a href="amplicon-bioinformatics-data-cleaning.html#construct-sequence-table-remove-chimeras"><i class="fa fa-check"></i><b>4.6</b> Construct Sequence Table &amp; Remove Chimeras</a></li>
 </ul></li>
 </ul>
 
@@ -164,7 +162,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="microbiome-analysis-workflow" class="section level1">
 <h1><span class="header-section-number">Chapter 2</span> Microbiome Analysis Workflow</h1>
 <p>The workflow of microbiome analysis has evolved through out the years. The development of technology and Bioinformatics has made a massive increment on the generation of genomic data that is used for microbiome analysis. Therefore, the use of programming tools such as R and its packages is becoming more widely used.</p>
-<p>If I may put it into 2 major steps, microbiome analysis consist of “Lab Work” and “Bioinformatic Analysis”. The lab work of a microbiome analysis is quite plenty and mostly technical, which I will not explain it detail in here. Meanwhile, the bioinformatic analysis will be explained in this book with some tutorial. We will be using R languages and its packages as bioinformatics tools.</p>
+<p>If I may put it into 2 major steps, microbiome analysis consist of “Lab Work” and “Bioinformatic Analysis” (<strong>Fig 2.1</strong>). The lab work of a microbiome analysis is quite plenty and mostly technical, which I will not explain it detail in here. Meanwhile, the bioinformatic analysis will be explained in this book with some tutorial. We will be using R languages and its packages as bioinformatics tools.</p>
 <br>
 <center>
 <img src="assets/02/flow.PNG" />
@@ -188,7 +186,7 @@ open source software for Bioinformatics, based on packages written primarily in 
 <li>Trimming and Filtering</li>
 <li>Infer Sequence Variants</li>
 <li>Merge Forward-Reverse DNA Sequences</li>
-<li>Construct Sequence Tables &amp; Remove Chimeras</li>
+<li>Construct Sequence Table &amp; Remove Chimeras</li>
 </ol>
 <ol start="2" style="list-style-type: decimal">
 <li>Amplicon Bioinformatics: Phylogenetic Analysis</li>
